compiler/parser/src/snapshots/rustpython_parser__parser__tests__parse_dict_comprehension.snap
---
source: compiler/parser/src/parser.rs
expression: parse_ast
---
Located {
    location: Location {
        row: 1,
        column: 1,
    },
    end_location: Location {
        row: 1,
        column: 20,
    },
    custom: (),
    node: DictComp {
        key: Located {
            location: Location {
                row: 1,
                column: 2,
            },
            end_location: Location {
                row: 1,
                column: 4,
            },
            custom: (),
            node: Name {
                id: "x1",
                ctx: Load,
            },
        },
        value: Located {
            location: Location {
                row: 1,
                column: 6,
            },
            end_location: Location {
                row: 1,
                column: 8,
            },
            custom: (),
            node: Name {
                id: "x2",
                ctx: Load,
            },
        },
        generators: [
            Comprehension {
                target: Located {
                    location: Location {
                        row: 1,
                        column: 13,
                    },
                    end_location: Location {
                        row: 1,
                        column: 14,
                    },
                    custom: (),
                    node: Name {
                        id: "y",
                        ctx: Store,
                    },
                },
                iter: Located {
                    location: Location {
                        row: 1,
                        column: 18,
                    },
                    end_location: Location {
                        row: 1,
                        column: 19,
                    },
                    custom: (),
                    node: Name {
                        id: "z",
                        ctx: Load,
                    },
                },
                ifs: [],
                is_async: 0,
            },
        ],
    },
}
