compiler/parser/src/snapshots/rustpython_parser__parser__tests__parse_f_string.snap
---
source: compiler/parser/src/parser.rs
expression: parse_ast
---
[
    Located {
        start: Location {
            row: 1,
            column: 3,
        },
        end: Location {
            row: 1,
            column: 15,
        },
        custom: (),
        node: Expr {
            value: Located {
                start: Location {
                    row: 1,
                    column: 3,
                },
                end: Location {
                    row: 1,
                    column: 15,
                },
                custom: (),
                node: JoinedStr {
                    values: [
                        Located {
                            start: Location {
                                row: 1,
                                column: 3,
                            },
                            end: Location {
                                row: 1,
                                column: 15,
                            },
                            custom: (),
                            node: Constant {
                                value: Str(
                                    "Hello world",
                                ),
                                kind: None,
                            },
                        },
                    ],
                },
            },
        },
    },
]
