compiler/parser/src/snapshots/rustpython_parser__parser__tests__parse_if_else_generator_comprehension.snap
---
source: compiler/parser/src/parser.rs
expression: parse_ast
---
Located {
    location: Location {
        row: 1,
        column: 1,
    },
    end_location: Location {
        row: 1,
        column: 27,
    },
    custom: (),
    node: GeneratorExp {
        elt: Located {
            location: Location {
                row: 1,
                column: 4,
            },
            end_location: Location {
                row: 1,
                column: 15,
            },
            custom: (),
            node: IfExp {
                test: Located {
                    location: Location {
                        row: 1,
                        column: 7,
                    },
                    end_location: Location {
                        row: 1,
                        column: 8,
                    },
                    custom: (),
                    node: Name {
                        id: "y",
                        ctx: Load,
                    },
                },
                body: Located {
                    location: Location {
                        row: 1,
                        column: 2,
                    },
                    end_location: Location {
                        row: 1,
                        column: 3,
                    },
                    custom: (),
                    node: Name {
                        id: "x",
                        ctx: Load,
                    },
                },
                orelse: Located {
                    location: Location {
                        row: 1,
                        column: 14,
                    },
                    end_location: Location {
                        row: 1,
                        column: 15,
                    },
                    custom: (),
                    node: Name {
                        id: "y",
                        ctx: Load,
                    },
                },
            },
        },
        generators: [
            Comprehension {
                target: Located {
                    location: Location {
                        row: 1,
                        column: 20,
                    },
                    end_location: Location {
                        row: 1,
                        column: 21,
                    },
                    custom: (),
                    node: Name {
                        id: "y",
                        ctx: Store,
                    },
                },
                iter: Located {
                    location: Location {
                        row: 1,
                        column: 25,
                    },
                    end_location: Location {
                        row: 1,
                        column: 26,
                    },
                    custom: (),
                    node: Name {
                        id: "z",
                        ctx: Load,
                    },
                },
                ifs: [],
                is_async: 0,
            },
        ],
    },
}
