compiler/parser/src/snapshots/rustpython_parser__parser__tests__parse_kwargs.snap
---
source: compiler/parser/src/parser.rs
expression: parse_ast
---
[
    Located {
        start: Location {
            row: 1,
            column: 1,
        },
        end: Location {
            row: 1,
            column: 33,
        },
        custom: (),
        node: Expr {
            value: Located {
                start: Location {
                    row: 1,
                    column: 8,
                },
                end: Location {
                    row: 1,
                    column: 33,
                },
                custom: (),
                node: Call {
                    func: Located {
                        start: Location {
                            row: 1,
                            column: 1,
                        },
                        end: Location {
                            row: 1,
                            column: 8,
                        },
                        custom: (),
                        node: Name {
                            id: "my_func",
                            ctx: Load,
                        },
                    },
                    args: [
                        Located {
                            start: Location {
                                row: 1,
                                column: 10,
                            },
                            end: Location {
                                row: 1,
                                column: 21,
                            },
                            custom: (),
                            node: Constant {
                                value: Str(
                                    "positional",
                                ),
                                kind: None,
                            },
                        },
                    ],
                    keywords: [
                        Located {
                            start: Location {
                                row: 1,
                                column: 23,
                            },
                            end: Location {
                                row: 1,
                                column: 32,
                            },
                            custom: (),
                            node: KeywordData {
                                arg: Some(
                                    "keyword",
                                ),
                                value: Located {
                                    start: Location {
                                        row: 1,
                                        column: 31,
                                    },
                                    end: Location {
                                        row: 1,
                                        column: 32,
                                    },
                                    custom: (),
                                    node: Constant {
                                        value: Int(
                                            2,
                                        ),
                                        kind: None,
                                    },
                                },
                            },
                        },
                    ],
                },
            },
        },
    },
]
