compiler/parser/src/snapshots/rustpython_parser__parser__tests__parse_list_comprehension.snap
---
source: compiler/parser/src/parser.rs
expression: parse_ast
---
Located {
    location: Location {
        row: 1,
        column: 1,
    },
    end_location: Location {
        row: 1,
        column: 15,
    },
    custom: (),
    node: ListComp {
        elt: Located {
            location: Location {
                row: 1,
                column: 2,
            },
            end_location: Location {
                row: 1,
                column: 3,
            },
            custom: (),
            node: Name {
                id: "x",
                ctx: Load,
            },
        },
        generators: [
            Comprehension {
                target: Located {
                    location: Location {
                        row: 1,
                        column: 8,
                    },
                    end_location: Location {
                        row: 1,
                        column: 9,
                    },
                    custom: (),
                    node: Name {
                        id: "y",
                        ctx: Store,
                    },
                },
                iter: Located {
                    location: Location {
                        row: 1,
                        column: 13,
                    },
                    end_location: Location {
                        row: 1,
                        column: 14,
                    },
                    custom: (),
                    node: Name {
                        id: "z",
                        ctx: Load,
                    },
                },
                ifs: [],
                is_async: 0,
            },
        ],
    },
}
