compiler/parser/src/snapshots/rustpython_parser__parser__tests__parse_named_expression_generator_comprehension.snap
---
source: compiler/parser/src/parser.rs
expression: parse_ast
---
Located {
    location: Location {
        row: 1,
        column: 1,
    },
    end_location: Location {
        row: 1,
        column: 24,
    },
    custom: (),
    node: GeneratorExp {
        elt: Located {
            location: Location {
                row: 1,
                column: 2,
            },
            end_location: Location {
                row: 1,
                column: 12,
            },
            custom: (),
            node: NamedExpr {
                target: Located {
                    location: Location {
                        row: 1,
                        column: 2,
                    },
                    end_location: Location {
                        row: 1,
                        column: 12,
                    },
                    custom: (),
                    node: Name {
                        id: "x",
                        ctx: Store,
                    },
                },
                value: Located {
                    location: Location {
                        row: 1,
                        column: 9,
                    },
                    end_location: Location {
                        row: 1,
                        column: 12,
                    },
                    custom: (),
                    node: BinOp {
                        left: Located {
                            location: Location {
                                row: 1,
                                column: 7,
                            },
                            end_location: Location {
                                row: 1,
                                column: 8,
                            },
                            custom: (),
                            node: Name {
                                id: "y",
                                ctx: Load,
                            },
                        },
                        op: Add,
                        right: Located {
                            location: Location {
                                row: 1,
                                column: 11,
                            },
                            end_location: Location {
                                row: 1,
                                column: 12,
                            },
                            custom: (),
                            node: Constant {
                                value: Int(
                                    1,
                                ),
                                kind: None,
                            },
                        },
                    },
                },
            },
        },
        generators: [
            Comprehension {
                target: Located {
                    location: Location {
                        row: 1,
                        column: 17,
                    },
                    end_location: Location {
                        row: 1,
                        column: 18,
                    },
                    custom: (),
                    node: Name {
                        id: "y",
                        ctx: Store,
                    },
                },
                iter: Located {
                    location: Location {
                        row: 1,
                        column: 22,
                    },
                    end_location: Location {
                        row: 1,
                        column: 23,
                    },
                    custom: (),
                    node: Name {
                        id: "z",
                        ctx: Load,
                    },
                },
                ifs: [],
                is_async: 0,
            },
        ],
    },
}
