compiler/parser/src/snapshots/rustpython_parser__parser__tests__parse_print_2.snap
---
source: compiler/parser/src/parser.rs
expression: parse_ast
---
[
    Located {
        location: Location {
            row: 1,
            column: 1,
        },
        end_location: Location {
            row: 1,
            column: 24,
        },
        custom: (),
        node: Expr {
            value: Located {
                location: Location {
                    row: 1,
                    column: 1,
                },
                end_location: Location {
                    row: 1,
                    column: 24,
                },
                custom: (),
                node: Call {
                    func: Located {
                        location: Location {
                            row: 1,
                            column: 1,
                        },
                        end_location: Location {
                            row: 1,
                            column: 6,
                        },
                        custom: (),
                        node: Name {
                            id: "print",
                            ctx: Load,
                        },
                    },
                    args: [
                        Located {
                            location: Location {
                                row: 1,
                                column: 7,
                            },
                            end_location: Location {
                                row: 1,
                                column: 20,
                            },
                            custom: (),
                            node: Constant {
                                value: Str(
                                    "Hello world",
                                ),
                                kind: None,
                            },
                        },
                        Located {
                            location: Location {
                                row: 1,
                                column: 22,
                            },
                            end_location: Location {
                                row: 1,
                                column: 23,
                            },
                            custom: (),
                            node: Constant {
                                value: Int(
                                    2,
                                ),
                                kind: None,
                            },
                        },
                    ],
                    keywords: [],
                },
            },
        },
    },
]
