compiler/parser/src/snapshots/rustpython_parser__parser__tests__parse_string.snap
---
source: compiler/parser/src/parser.rs
expression: parse_ast
---
[
    Located {
        location: Location {
            row: 1,
            column: 2,
        },
        end_location: Location {
            row: 1,
            column: 14,
        },
        custom: (),
        node: Expr {
            value: Located {
                location: Location {
                    row: 1,
                    column: 2,
                },
                end_location: Location {
                    row: 1,
                    column: 14,
                },
                custom: (),
                node: Constant {
                    value: Str(
                        "Hello world",
                    ),
                    kind: None,
                },
            },
        },
    },
]
